# reexample

./: .gitignore  .sesskey  CLAUDE.md  main.py  man.txt  pyproject.toml  scratch.py  supa.md  supabase_setup.sql
backend/: admin.py  analytics.py  ga_data.py  listings.py  models.py  supabase_client.py
documents/orig/: about.html  index.html
documents/reference/: contact.html  featured.html  listing.html
pages/: about.py  contact.py  dashboard.py  forlease.py  forsale.py  homepage.py  preselling.py
styles/components/: cookie_banner.css  cookie_banner.py  footer.css  footer.py  navbar.css  navbar.js  navbar.py
styles/static/: about.css  about.js  contact.css  contact.js  cookie_banner.js  dashboard.css  dashboard.js  forlease.css  forlease.js  forsale.css  forsale.js  homepage.css  homepage.js  listing.js  preselling.css  preselling.js
